chore: remove sensitive credentials from tracking

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
         <th:block th:each="tarefa : ${tarefas}">
             <li th:text="${tarefa.titulo}">Título da tarefa</li>
             <li th:text="${tarefa.status}">Status da tarefa</li>
+            <a th:href="@{/tarefas/atualizar/{id}(id=${tarefa.id})}">Editar</a>
+            <a th:href="@{/tarefas/deletar/{id}(id=${tarefa.id})}">Deletar</a>
+            <br>
         </th:block>
     </ul>
 
